--- a/main.html
+++ b/main.html
@@ -8,6 +8,39 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+		<tr>
+			<td>Roll Numbers</td>
+			<td>Student Name</td>
+		</tr>
+		</thead>
+		<tbody>
+		<tr>
+			<td>1</td>
+			<td>Aravind</td>
+		</tr>
+		<tr>
+			<td>2</td>
+			<td>Ayush</td>
+		</tr>
+		</tbody>
+	</table>
+	<ol>List of medias
+		<li>
+			<img src="https://picsum.photos/id/123/200/300" alt="water">
+		</li>
+		<li>
+			<video controls>
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+			</video>
+		</li>
+		<li>
+			<audio controls>
+				<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+			</audio>
+		</li>
+	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
