--- a/main.html
+++ b/main.html
@@ -24,6 +24,10 @@
 			<td>2</td>
 			<td>Ayush</td>
 		</tr>
+			<tr>
+				<td>3</td>
+				<td>QWRETY</td>
+			</tr>
 		</tbody>
 	</table>
 	<ol>List of medias
