--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
 	<table>
 		<thead>
 		<tr>
-			<td>Roll Numbers</td>
-			<td>Student Name</td>
+			<th>Roll Numbers</th>
+			<th>Student Name</th>
 		</tr>
 		</thead>
 		<tbody>
